Fixed projdisplay side panel to overflow-auto

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -186,6 +186,7 @@ body {
     /* text-align: center; */
     border-right: 3px dashed #F09819;
     background: rgba(0,0,0,0.6);
+    height: 400px;
 }
 
 #project-display-section {
